# tradesignal

./: .gitignore  README.md  pyproject.toml
config/: strategy_config.dual_momentum.json  strategy_config.mean_reversion.json  tradesignal.hk.sample.json  tradesignal.sample.json  tradesignal.us.sample.json
deploy/: com.tradesignal.hk.open.mean_reversion.plist  com.tradesignal.hk.open.plist  com.tradesignal.us.open.mean_reversion.plist  com.tradesignal.us.open.plist
docs/: advanced.md
scripts/: explain_weighted_momentum.py  fetch_hk_stocks_sina.py  run_tradesignal_hk_open.sh  run_tradesignal_hk_open_mean_reversion.sh  run_tradesignal_us_open.sh  run_tradesignal_us_open_mean_reversion.sh
tests/: test_cli_notification.py  test_config_strategy_name.py  test_explain_weighted_momentum.py  test_mean_reversion_signal.py  test_refresh_window.py  test_strategy_factory.py
tradesignal/: __main__.py  cli.py  config.py  daily_history.py  data.py  emailer.py  polygon_day.py  yfinance_day.py
tradesignal/providers/: __init__.py  fallback_provider.py  sina_provider.py  yfinance_provider.py
tradesignal/strategy/: __init__.py  dual_momentum.py  factory.py  mean_reversion.py  volume.py
